margin paddding fix work,about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,9 @@ body {
   margin: auto;
   color: transparent;
   -webkit-text-stroke: 1.5px #7a849a;
-  padding-bottom: 70px;
+  padding-bottom: 82px;
   font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 @media (max-width: 575px) {
@@ -61,7 +61,7 @@ body {
 
 section {
   position: relative;
-  padding: 15px 0;
+  padding: 150px 0;
 }
 
 input:required {
@@ -152,7 +152,7 @@ input:required {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 75px !important;
+  margin-bottom: 90px !important;
 }
 
 @media (max-width: 1024px) {
@@ -487,8 +487,8 @@ header .container .head_content .menu.active .m_bar li:first-child {
 #work {
   background-color: #f8f8f8;
   position: relative;
-  padding-top: 170px;
-  padding-bottom: 200px;
+  padding-top: 175px;
+  padding-bottom: 100px;
 }
 
 @media (max-width: 575px) {
@@ -671,8 +671,9 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 46px;
   font-weight: 600;
   font-family: 'Oswald', sans-serif;
-  padding-bottom: 40px;
+  padding-bottom: 42px;
   line-height: 55px;
+  margin: 0;
 }
 
 .project_info .v_project {
@@ -681,6 +682,11 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 12px;
   letter-spacing: 8px;
   text-transform: uppercase;
+}
+
+#about {
+  margin-top: 25px;
+  padding-bottom: 100px;
 }
 
 #about .about_content .about_contect_img {
@@ -706,7 +712,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 46px;
   font-weight: 600;
   font-family: 'Oswald', sans-serif;
-  padding-bottom: 7px;
+  padding-bottom: 20px;
   line-height: 55px;
 }
 
@@ -717,12 +723,17 @@ header .container .head_content .menu.active .m_bar li:first-child {
   margin-right: 18px;
 }
 
+#about_content_2 {
+  padding-top: 100px;
+  padding-bottom: 190px;
+}
+
 #about_content_2 .office_content_wrapper h3 {
   color: #3E424B;
   font-size: 46px;
   font-weight: 600;
   font-family: 'Oswald', sans-serif;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   line-height: 55px;
 }
 
@@ -731,12 +742,17 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 20px;
   line-height: 44px;
   margin-right: 18px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   margin-right: 75px;
 }
 
+#team {
+  padding: 188px 0;
+  padding-bottom: 120px;
+}
+
 #team .team_card .member_position {
-  margin-bottom: 70px;
+  margin-bottom: 105px;
 }
 
 #team .team_card .member_position h3 {
@@ -744,7 +760,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 62px;
   font-weight: 600;
   font-family: 'Oswald', sans-serif;
-  padding-top: 70px;
+  padding-top: 35px;
   line-height: 74px;
 }
 
@@ -752,7 +768,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 20px;
   line-height: 20px;
   color: #7A849A;
-  margin-top: 25px;
+  margin-top: 12px;
   display: block;
 }
 
@@ -1028,7 +1044,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 20px;
   line-height: 44px;
   color: #3e424b;
-  padding-bottom: 10px;
+  padding-bottom: 25px;
   display: block;
 }
 
@@ -1086,8 +1102,8 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #footer_area .connect_info {
-  margin-top: 51px;
-  margin-bottom: 26px;
+  margin-top: 78px;
+  margin-bottom: 35px;
 }
 
 @media (max-width: 1024px) {
@@ -1100,6 +1116,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 20px;
   line-height: 44px;
   color: #3e424b;
+  padding-bottom: 12px;
 }
 
 #footer_area .connect_info p {
@@ -1269,6 +1286,18 @@ header .container .head_content .menu.active .m_bar li:first-child {
 
 .mb-30 {
   margin-bottom: 30px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
 }
 
 /* brand_area part end */
