--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -144,6 +144,15 @@
 .mb-30 {
   margin-bottom: 30px;
 }
+.mt-50{
+  margin-top: 50px;
+}
+.mb-50{
+  margin-bottom: 50px;
+}
+.mb-100{
+  margin-bottom: 100px;
+}
 /* brand_area part end */
 
 /* ?? part start */
