--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -59,9 +59,9 @@ body {
   margin: auto;
   color: transparent;
   -webkit-text-stroke: 1.5px #7a849a;
-  padding-bottom: 70px;
+  padding-bottom: 82px;
   font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
+  text-transform: capitalize;
   @media(max-width: 575px) {
     font-size: 52px;
   }
@@ -69,7 +69,7 @@ body {
 
 section {
   position: relative;
-  padding: 15px 0;
+  padding: 150px 0;
 }
 
 input:required {
@@ -164,7 +164,7 @@ input:required {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 75px !important; 
+  margin-bottom: 90px !important; 
   @media(max-width:1024px){
     padding-bottom: 35px;
   }
