--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,7 @@
 /* ?? part start */
 @import 'header';
 @import 'banner';
-@import 'work';
+@import 'work_slider';
 @import 'about';
 @import '404';
 @import 'testimonial';
