--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -13,7 +13,7 @@
             span {
                 font-size: 16;
                 line-height: 38px;
-                color: #3E424B;
+                color: $black;
             }
         }
     }
@@ -22,16 +22,16 @@
         padding-left: 36px;
 
         h3 {
-            color: #3E424B;
+            color: $black;
             font-size: 46px;
-            font-weight: 600;
-            font-family: 'Oswald', sans-serif;
+            font-weight: $semi_bold;
+            font-family: $oswald;
             padding-bottom: 20px;
             line-height: 55px;
         }
 
         p {
-            color: #7A849A;
+            color: $gray;
             font-size: 20px;
             line-height: 44px;
             margin-right: 18px;
@@ -44,16 +44,16 @@
     padding-bottom: 190px;
     .office_content_wrapper {
         h3 {
-            color: #3E424B;
+            color: $black;
             font-size: 46px;
-            font-weight: 600;
-            font-family: 'Oswald', sans-serif;
+            font-weight: $semi_bold;
+            font-family: $oswald;
             padding-bottom: 20px;
             line-height: 55px;
         }
 
         p {
-            color: #7A849A;
+            color: $gray;
             font-size: 20px;
             line-height: 44px;
             margin-right: 18px;
@@ -71,10 +71,10 @@
             margin-bottom: 105px;
 
             h3 {
-                color: #3E424B;
+                color: $black;
                 font-size: 62px;
-                font-weight: 600;
-                font-family: 'Oswald', sans-serif;
+                font-weight: $semi_bold;
+                font-family: $oswald;
                 padding-top: 35px;
                 line-height: 74px;
             }
@@ -82,7 +82,7 @@
             span {
                 font-size: 20px;
                 line-height: 20px;
-                color: #7A849A;
+                color: $gray;
                 margin-top: 12px;
                 display: block;
             }
