--- a/assets/scss/_joinus.scss
+++ b/assets/scss/_joinus.scss
@@ -31,10 +31,10 @@
         font-size: 12px;
         line-height: 14px;
         letter-spacing: 2.1px;
-        color: #3e424b;
-        border: 2px solid #3e424b;
+        color: $black;
+        border: 2px solid $black;
         padding: 16px;
-        font-weight: 600;
+        font-weight: $semi_bold;
         text-transform: uppercase;
         display: inline-block;
         outline: none;
