--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -14,7 +14,7 @@
     span {
       font-size: 20px;
       line-height: 44px;
-      color: #3e424b;
+      color: $black;
       padding-bottom: 25px;
       display: block;
     }
@@ -51,8 +51,8 @@
         a {
           font-size: 32px;
           line-height: 38px;
-          font-weight: 600;
-          color: #3e424b;
+          font-weight: $semi_bold;
+          color: $black;
           display: inline-block;
           text-transform: capitalize;
 
@@ -76,7 +76,7 @@
     h4 {
       font-size: 20px;
       line-height: 44px;
-      color: #3e424b;
+      color: $black;
       padding-bottom: 12px;
     }
 
@@ -84,7 +84,7 @@
       text-align: center;
       font-size: 16px;
       line-height: 38px;
-      color: #7a849a;
+      color: $gray;
       margin: 0 21%;
 
       @media(max-width: 767px) {
@@ -95,8 +95,8 @@
     .email {
       font-size: 16px;
       line-height: 38px;
-      font-weight: 600;
-      color: #3e424b;
+      font-weight: $semi_bold;
+      color: $black;
     }
   }
 
@@ -109,7 +109,7 @@
 
 .copyright_text {
   p {
-    color: #3E424B;
+    color: $black;
     padding-bottom: 30px;
     font-size: 16px;
     line-height: 1.7;
