--- a/assets/scss/_testimonial.scss
+++ b/assets/scss/_testimonial.scss
@@ -1,5 +1,5 @@
 #testimonial-area {
-  background: #3e424b;
+  background: $black;
   padding-top: 178px;
   padding-bottom: 310px;
   position: relative;
@@ -12,7 +12,7 @@
   }
   .testimonial_slider {
     text-align: center;
-    color: #fff;
+    color: $white;
     .slide_item {
       .content_text {
         font-size: 32px;
@@ -35,7 +35,7 @@
       .client_position {
         font-size: 14px;
         line-height: 16px;
-        color: #7A849A;
+        color: $gray;
         display: inline-block;
         margin-top: -10px;
       }
@@ -43,9 +43,9 @@
     .slick-dots{
       transform: translate(-55%,-12px);
       li{
-        border: 1px solid #fff;
+        border: 1px solid $white;
         &.slick-active{
-          background-color: #fff;
+          background-color: $white;
         }
       }
     }
@@ -80,7 +80,7 @@
     }
     .slick-prev:before,
     .slick-next:before {
-      color: #fff;
+      color: $white;
       font-size: 16px;
       outline: none;
       text-transform: capitalize;
