--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -1,7 +1,7 @@
 #work{
     position: relative;
     padding-top: 175px;
-    padding-bottom: 100px;
+    padding-bottom: 0;
 
     .work_content {
         .tab-text {
