--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,7 +28,7 @@
         height: 100%;
         transform-style: preserve-3d;
         transition: all 0.9s ease-in-out;
-        border: 1.5px solid #3e424b;
+        border: 1.5px solid $black;
 
         .front_part {
           position: absolute;
@@ -42,7 +42,7 @@
             font-size: 84px;
             line-height: 110px;
             text-align: center;
-            font-family: 'Oswald', sans-serif;
+            font-family: $oswald;
             text-transform: uppercase;
             @media(max-width: 575px) {
               font-size: 66px;
@@ -60,7 +60,7 @@
           width: 100%;
           height: 100%;
           backface-visibility: hidden;
-          background: #3e424b;
+          background: $black;
           transform: rotateY(180deg);
           display: flex;
           align-items: center;
@@ -72,8 +72,8 @@
               font-size: 46px;
               line-height: 55px;
               text-transform: uppercase;
-              color: #fff;
-              font-family: 'Oswald', sans-serif;
+              color: $white;
+              font-family: $oswald;
               margin-bottom: 32px;
               @media(max-width: 575px) {
                 font-size: 30px;
@@ -88,7 +88,7 @@
             p {
               font-size: 16px;
               line-height: 38px;
-              color: #7a849a;
+              color: $gray;
               margin-bottom: 40px;
               @media(max-width: 575px) {
                 line-height: 32px;
@@ -99,9 +99,9 @@
               font-size: 12px;
               line-height: 14px;
               text-transform: uppercase;
-              color: #fff;
+              color: $white;
               font-family: 'Poppins', sans-serif;
-              font-weight: 600;
+              font-weight: $semi_bold;
               img{
                 @media(max-width: 575px) {
                   width: 22px !important;
