--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -731,8 +731,14 @@ header .container .head_content .menu.active .m_bar li:first-child {
   margin-bottom: 30px;
 }
 
+#about .about_content .about_content_img_1 img {
+  width: 200px;
+  height: 354px;
+  object-fit: contain;
+}
+
 #about .about_content .play_video {
-  margin-top: 20px;
+  margin-top: -4px;
 }
 
 #about .about_content .play_video span {
@@ -742,7 +748,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
 }
 
 #about .about_content_wrapper {
-  padding-left: 36px;
+  padding-left: 40px;
 }
 
 #about .about_content_wrapper h3 {
@@ -784,9 +790,26 @@ header .container .head_content .menu.active .m_bar li:first-child {
   margin-right: 75px;
 }
 
+#about_content_2 .about_content_2_img img {
+  padding-top: 34px;
+}
+
+#about_content_2 .container .row .r_space {
+  padding-left: 0px;
+}
+
 #team {
-  padding: 188px 0;
-  padding-bottom: 120px;
+  padding-top: 178px;
+  padding-bottom: 100px;
+  background-color: #F9F9F9;
+}
+
+#team .section_title h2 {
+  padding-bottom: 74px;
+}
+
+#team .team_card {
+  margin-top: 22px;
 }
 
 #team .team_card .member_position {
@@ -806,7 +829,7 @@ header .container .head_content .menu.active .m_bar li:first-child {
   font-size: 20px;
   line-height: 20px;
   color: #7A849A;
-  margin-top: 12px;
+  margin-top: 9px;
   display: block;
 }
 
@@ -1367,14 +1390,4 @@ header .container .head_content .menu.active .m_bar li:first-child {
 /* brand_area part end */
 /* ?? part start */
 /* ?? part end */
-/* media query part start */
-/* medium  device start*/
-/* medium  device end*/
-/* ?? device start*/
-/* ?? device end*/
-/* ?? device start*/
-/* ?? device end*/
-/* ?? device start*/
-/* ?? device end*/
-/* media query part end */
 /*# sourceMappingURL=style.css.map */
