resposive file add

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1211,6 +1211,119 @@ header .container .head_content .menu.active .m_bar li:first-child {
   margin: 0;
 }
 
+/*----------------------------------------*/
+/*  RESPONSIVE CSS START 
+/*----------------------------------------*/
+/* laptop devices 1200 - 1600 */
+@media only screen and (min-width: 1200px) and (max-width: 1600px) {
+  /* common area start */
+  /* sidebar extra info  area start*/
+  /* header area start */
+  /* slider area start */
+  /* about area start */
+  /* features area start */
+  /* services area start */
+  /* counter area start */
+  /* sychologist area start */
+  /* appointment area start */
+  /* case area start */
+  /* why area start */
+  /* faq area start */
+  /* testimonial area start */
+  /* team area start */
+  /* blog area start */
+  /* event area start */
+  /* award slider area start */
+}
+
+/* large devices 992 - 1199*/
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  /* common area start */
+  /* sidebar extra info  area start*/
+  /* header area start */
+  /* slider area start */
+  /* about area start */
+  /* features area start */
+  /* services area start */
+  /* counter area start */
+  /* sychologist area start */
+  /* appointment area start */
+  /* case area start */
+  /* why area start */
+  /* faq area start */
+  /* testimonial area start */
+  /* team area start */
+  /* blog area start */
+  /* event area start */
+  /* award slider area start */
+}
+
+/* Medium devices 768 - 991 */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  /* common area start */
+  /* sidebar extra info  area start*/
+  /* header area start */
+  /* slider area start */
+  /* about area start */
+  /* features area start */
+  /* services area start */
+  /* counter area start */
+  /* sychologist area start */
+  /* appointment area start */
+  /* case area start */
+  /* why area start */
+  /* faq area start */
+  /* testimonial area start */
+  /* team area start */
+  /* blog area start */
+  /* event area start */
+  /* award slider area start */
+}
+
+/* Small devices 576 - 767 */
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  /* common area start */
+  /* sidebar extra info  area start*/
+  /* header area start */
+  /* slider area start */
+  /* about area start */
+  /* features area start */
+  /* services area start */
+  /* counter area start */
+  /* sychologist area start */
+  /* appointment area start */
+  /* case area start */
+  /* why area start */
+  /* faq area start */
+  /* testimonial area start */
+  /* team area start */
+  /* blog area start */
+  /* event area start */
+  /* award slider area start */
+}
+
+/* Small devices 0 - 575 */
+@media (max-width: 575px) {
+  /* common area start */
+  /* sidebar extra info  area start*/
+  /* header area start */
+  /* slider area start */
+  /* about area start */
+  /* features area start */
+  /* services area start */
+  /* counter area start */
+  /* sychologist area start */
+  /* appointment area start */
+  /* case area start */
+  /* why area start */
+  /* faq area start */
+  /* testimonial area start */
+  /* team area start */
+  /* blog area start */
+  /* event area start */
+  /* award slider area start */
+}
+
 /* WE_DO part start */
 #WE_Do {
   padding-top: 180px;
